# train

./: .gitignore  README.md  pyproject.toml
configs/: config.example.yaml  dpo_qwen35_a3b.yaml  render_valid.yaml  sft_qwen35_a3b.yaml  smoke.yaml
constraints/: cuda126_kernels.txt
docs/: config-reference.md  hashing-guide.md  metrics-reference.md
src/: precompute_ref.py  prepare.py  train.py
src/checkpointing/: __init__.py  atomic.py  checksums.py  load.py  save.py
src/config/: __init__.py  hashing.py  loader.py  model_source.py  schema.py
src/data/: __init__.py  collators.py  dataloaders.py  dpo_dataset.py  inspection.py  packing.py  pretokenized_dataset.py  ref_cache.py  ref_logprobs.py  routed_batch_sampler.py  sft_dataset.py
src/dpo/: __init__.py  candidate_generation.py  pair_builder.py
src/eval/: bfcl.py  ordinary.py  predictors.py  report.py
src/eval/ru_bfcl/: __init__.py  __main__.py  cli.py  io.py  matching.py  schema.py  validator.py
src/eval/ru_bfcl/data/: __init__.py
src/losses/: __init__.py  dpo.py  logprobs.py  sft.py
src/preprocessing/: __init__.py  io.py  masking.py  pipeline.py  rendering.py
src/qwen35_tuning/: __init__.py
src/qwen35_tuning/checkpointing/: __init__.py  atomic.py  checksums.py  load.py  save.py
src/qwen35_tuning/config/: hashing.py  loader.py  schema.py
src/qwen35_tuning/data/: __init__.py  canonicalize.py  dvc.py  manifests.py  parquet_io.py  preprocess.py  schemas.py
src/qwen35_tuning/datasets/: __init__.py
src/qwen35_tuning/dpo/: ref_logprobs.py  sampler.py
src/qwen35_tuning/eval/: __init__.py  bfcl_validator.py  predictors.py  summarize.py
src/qwen35_tuning/losses/: dpo.py  metrics.py  sft.py
src/qwen35_tuning/masking/: __init__.py  assistant_spans.py  target_selection.py  token_mask.py
src/qwen35_tuning/registry/: modelctl_client.py  package.py  selection.py  tags.py
src/qwen35_tuning/rendering/: __init__.py  audit.py  qwen_template.py  reasoning.py  tools.py
src/qwen35_tuning/sampling/: resume_state.py  routed_batch_sampler.py
src/qwen35_tuning/trainer/: __init__.py  callbacks.py  progress.py  state.py  trainer.py
src/qwen35_tuning/utils/: seed.py
src/registry/: __init__.py  modelctl_client.py  package.py  selection.py
src/sampling/: __init__.py  schedules.py
src/tracking/: __init__.py  async_worker.py  lineage.py  model_source.py  params.py  run.py
src/trainer/: callbacks.py  distributed.py  modeling.py  progress.py  ref_logprobs.py  state.py  trainer.py
src/utils/: cuda_runtime.py  hashing.py  jsonl.py  logging.py  torch.py
tests/: conftest.py  test_async_tracking_worker.py  test_bfcl_eval.py  test_bfcl_predictors.py  test_checkpoint_save.py  test_config_loader.py  test_dataloaders.py  test_distributed.py  test_eval_and_quality.py  test_integration_opt_in.py  test_loss_masks.py  test_losses_and_trainer.py  test_model_source.py  test_modelctl_generic_layout.py  test_modeling.py  test_optimizer.py  test_ordinary_eval.py  test_parquet_format.py  test_prepare_cli.py  test_preprocess_real_format.py  test_preprocess_script.py  test_preprocessing_cache.py  test_preprocessing_contracts.py  test_reasoning_disabled.py  test_ref_cache.py  test_ref_logprobs_and_lineage.py  test_registry_and_modelctl.py  test_registry_selection.py  test_registry_tags.py  test_routed_sampler.py  test_routing_and_dataloaders.py  test_ru_bfcl.py  test_runtime_contracts.py  test_sft_loss.py  test_split_paths.py  test_startup_preprocessing.py  test_target_selection.py  test_tracking_lineage.py  test_trainer_loop.py
