[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen35-tuning"
version = "0.1.0"
description = "Production-grade SFT/DPO training contour for Qwen3.5-35B-A3B LoRA."
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30",
  "datasets>=2.19",
  "mlflow>=2.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "peft>=0.11",
  "pyarrow>=15",
  "pyyaml>=6",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
modelctl = "modelctl.cli:main"

[tool.setuptools.packages.find]
where = ["src", "vendor/modelctl-mlflow"]

[tool.pytest.ini_options]
pythonpath = ["src", "vendor/modelctl-mlflow"]
testpaths = ["tests"]
