[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estadel-training"
version = "0.1.0"
description = "Custom FSDP/LoRA SFT and DPO training contour with MLflow/modelctl registry integration."
readme = "AGENTS.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=1.14,<2",
  "huggingface-hub>=0.30,<2",
  "mlflow>=2.17,<4",
  "modelctl-mlflow>=0.1,<1",
  "numpy>=1.26,<3",
  "packaging>=24",
  "pandas>=2.2,<3",
  "peft>=0.19,<0.20",
  "pillow>=10,<12",
  "psutil>=5.9,<8",
  "pyarrow>=16,<22",
  "PyYAML>=6,<7",
  "safetensors>=0.4.5,<1",
  "torch>=2.7,<2.8",
  "torchvision>=0.22,<0.23",
  "tqdm>=4.66,<5",
  "transformers[torch]>=5.0.0.dev0,<6",
]

[project.optional-dependencies]
cuda-kernels = [
  # flash-attn must be installed after torch and normally needs:
  #   pip install --no-build-isolation ".[cuda-kernels]"
  # CUDA wheels/toolchains are machine-specific; keep kernels optional.
  "causal-conv1d>=1.6,<2",
  "flash-attn>=2.8,<3",
  "ninja>=1.11,<2",
]
transformers-main = [
  # Qwen3.5 model cards currently require latest Transformers from main.
  # Install this extra only when the target environment can resolve VCS deps.
  "transformers[torch,serving] @ git+https://github.com/huggingface/transformers.git@main",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.scripts]
estadel-train = "train:main"
ru-bfcl-eval = "eval.ru_bfcl.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["train"]
packages = [
  "checkpointing",
  "config",
  "data",
  "eval",
  "eval.ru_bfcl",
  "eval.ru_bfcl.data",
  "losses",
  "preprocessing",
  "registry",
  "tracking",
  "trainer",
  "utils",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"eval.ru_bfcl.data" = ["*.jsonl"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: opt-in checks that require external data, registry, or network access",
]
