[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sft-dpo-training"
version = "0.1.0"
description = "Custom FSDP/LoRA SFT and DPO training contour with MLflow/modelctl registry integration."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "accelerate>=1.14,<2",
  "huggingface-hub>=0.30,<2",
  "mlflow>=2.17,<4",
  "modelctl-mlflow>=0.1,<2",
  "numpy>=1.26,<3",
  "packaging>=24",
  "pandas>=2.2,<3",
  "peft>=0.19.1,<0.20",
  "pillow>=10,<12",
  "psutil>=5.9,<8",
  "pyarrow>=16,<22",
  "PyYAML>=6,<7",
  "safetensors>=0.4.5,<1",
  "torch>=2.7,<2.13",
  # CUDA runtime wheel is required by CUDA/causal-conv1d CUDA extensions.
  # Pin the cu12 runtime family through constraints/cuda126_kernels.txt for production.
  "nvidia-cuda-runtime-cu12>=12.6,<13",
  "tqdm>=4.66,<5",
  "transformers[torch]>=5.12,<6",
]

[project.optional-dependencies]
cuda-kernels = [
  # flash-attn must be installed after torch and normally needs:
  #   pip install --no-build-isolation ".[cuda-kernels]"
  # CUDA wheels/toolchains are machine-specific; keep kernels optional.
  "causal-conv1d>=1.6,<2",
  "flash-attn>=2.8,<3",
  "ninja>=1.11,<2",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.scripts]
sft-dpo-prepare = "prepare:main"
sft-dpo-precompute-ref = "precompute_ref:main"
sft-dpo-train = "train:main"
ru-bfcl-eval = "eval.ru_bfcl.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["prepare", "precompute_ref", "train"]
packages = [
  "checkpointing",
  "config",
  "data",
  "eval",
  "eval.ru_bfcl",
  "eval.ru_bfcl.data",
  "losses",
  "preprocessing",
  "registry",
  "tracking",
  "trainer",
  "utils",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"eval.ru_bfcl.data" = ["*.jsonl"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: opt-in checks that require external data, registry, or network access",
]
